@@ -1,3 +1,7 @@
+2011-12-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/APC_PowerNet.pm: new discovery module
+
 2011-11-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Collector/SNMP.pm, perllib/Torrus/DevDiscover.pm:
